<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HeritageFragment">

        <Button
            android:id="@+id/passDataButton"
            style="@style/freebooters_button"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:background="@color/black"
            android:fontFamily="@font/archivo_narrow"
            android:text="@string/next"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <RadioGroup
            android:id="@+id/radioGroup"
            style="@style/other_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/passDataButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.35">

            <RadioButton
                android:id="@+id/radioButtonElf"
                style="@style/other_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elf" />

            <RadioButton
                android:id="@+id/radioButtonHalfling"
                style="@style/other_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/halfling" />

            <RadioButton
                android:id="@+id/radioButtonDwarf"
                style="@style/other_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/archivo_narrow"
                android:text="@string/dwarf" />

            <RadioButton
                android:id="@+id/radioButtonHuman"
                style="@style/other_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/human" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            style="@style/freebooters_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:text="@string/choose_their_prevailing_heritage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


